#109 Avoid the loading gears to overlap with splash

--- a/notex/static/css/base.css
+++ b/notex/static/css/base.css
@@ -3,7 +3,7 @@
     width: 180px;
     margin: -70px 0 0 -90px;
     height: 140px;
-    top: 50%;
+    top: 75%;
     left: 50%
 }
 
